# effectfuljs

./: .babelrc  .eslintrc.js  .ghci  .gitattributes  .gitignore  .gitmodules  .npmignore  .tern-project  .travis.yml  .yarnrc.yml  CNAME  LICENSE  README.md  about.html  archive.html  azure-pipelines.yml  contact.html  eslint.config.mjs  index.html  lerna.json  mfjs.cabal  package-lock.json  package.json  site.hs  stack.yaml
.github/: FUNDING.yml
css/: default.css  main.css  syntax.css
docs/: BACKGROUND.md  limitations.md
posts/: 2015-08-23-example.markdown  2016-06-23-simple-transducers-javascript.html  2016-06-23-simple-transducers-javascript.markdown  abstract-matters.html  abstract-matters.markdown  decoupling.html  decoupling.markdown  simple-transducers-javascript.html  simple-transducers-javascript.markdown
src/: bind.js  block.js  branch.js  builder.coffee  closure.js  coerce.js  command.coffee  compiler.coffee  compiler.js  config.coffee  config.js  control.js  debug.js  dump.js  exceptions.js  expr.coffee  flat.js  generators.js  graph.coffee  kit.coffee  loops.js  monadify.coffee  nastyRegister.coffee  ops.js  options.js  par.coffee  par.js  placeholder.js  policy.coffee  policy.js  propagate.js  rt.js  scope.coffee  scope.js  simplify.js  state.js  stmt.coffee  trace.js  transform.js  uniq.js  (+1 more)
templates/: archive.html  default.html  index.html  post-list.html  post.html
test/: .gitignore  blockState.js  cli.coffee  compilerExceptions.coffee  compilerExceptions.js  compilerExprs.coffee  compilerExprs.js  compilerLoops.coffee  compilerLoops.js  (+16 more)
(+965 files in other folders)
